Adding style sheet selectors

--- a/style.css
+++ b/style.css
@@ -1,4 +1,31 @@
-*{
-	border: 1px solid black;
-	font-family: 'Cinzel', serif;
+body{
+
+}
+
+#wrapper{
+
+}
+
+#title{
+
+}
+
+#perfumes{
+
+}
+
+#one{
+
+}
+
+#two{
+
+}
+
+#three{
+
+}
+
+.circle-image{
+
 }
